adapt allBlocksEmpty test program to one with all blocks filled integrate partially duplicated tests into allBlocks test add new allBlocks test programs remove first batch of redundant tests extract workflows tests into own file add botnroll to integration tests

--- a/OpenRobertaServer/src/test/resources/crossCompilerTests/robotSpecific/testSpec.yml
+++ b/OpenRobertaServer/src/test/resources/crossCompilerTests/robotSpecific/testSpec.yml
@@ -32,6 +32,9 @@ robots:
     mega:
         dir: ardu
         suffix: ".ino"
+    botnroll:
+        dir: botnroll
+        suffix: ".ino"
     nao:
         dir: nao
         suffix: ".py"
