fix connection missing in abstract stack machine visitorw fix nxt bug fix ardu rfid fix random element from list in cpp fix smaller ev3 lejos bugs

--- a/OpenRobertaRobot/src/main/resources/robotCommon.yml
+++ b/OpenRobertaRobot/src/main/resources/robotCommon.yml
@@ -673,10 +673,10 @@ wait:
         implementor: de.fhg.iais.roberta.syntax.sensor.generic.RfidSensor
         sensor: RFID
         mode: PRESENCE
-  RFID_SERIAL :
+  RFID_IDONE :
         implementor: de.fhg.iais.roberta.syntax.sensor.generic.RfidSensor
         sensor: RFID
-        mode: SERIAL
+        mode: IDONE
   SOUND :
         implementor: de.fhg.iais.roberta.syntax.sensor.generic.SoundSensor
         sensor: SOUND
